<resources>
    <string name="app_name">Movie App</string>
    <string name="tap">Tap a movie to see details or update your rating</string>
    <string name="title_empty_ratings">No Ratings Yet</string>
    <string name="title_empty_history" translatable="false">No History Yet</string>
    <string name="description_empty_ratings">Rate movies and series you\'ve watched to\ntrack what you love, and what you don\'t.</string>
    <string name="description_empty_history" translatable="false">It\'s quiet in here…Start watching and we\'ll \n keep track for you</string>
    <string name="cta_start_rating">Start Rating</string>
    <string name="cta_start_history" translatable="false">Find Something for You</string>
    <string name="known_for">Known For</string>
    <string name="see_all">See all</string>
    <string name="top_rated">Top Rated</string>
    <string name="top_rated_movie">Top Rated TV Shows</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="matches_your_vibe">Matches your Vibe</string>
    <string name="search_hint">Search…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_recently_released">Recently Released</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated Tv-Show</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Collections</string>
    <string name="profile">My Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="you_gave_it">You gave it </string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="reviews_comment">Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">Watch History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You\'re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="rating_star">Rating Star</string>
    <string name="items">%1$s Items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">List Name</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Explore some movies on "Home" or "Search" and then create your movie list.</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="welcome_to_your_movie_universe">Welcome to Your Movie Universe</string>
    <string name="discover_track_and_rate_your_favorite_nmovies_amp_series"><![CDATA[Discover, track, and rate your favorite \nmovies & series.]]></string>
    <string name="track_everything">Track Everything</string>
    <string name="your_watchlist_your_ratings_all_in_one_place">Your Watchlist. Your Ratings. All in One /nPlace.</string>
    <string name="personalized_recommendations">Personalized Recommendations</string>
    <string name="answer_fun_questions_to_get_handpicked_recommendations">Answer fun questions to get handpicked \nrecommendations.</string>
    <string name="get_started">Get Started</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="tiktok">Tiktok</string>
    <string name="show_more">Show More</string>
    <string name="gallery">Gallery</string>
    <string name="in">In %1$s</string>
    <string name="born_on">Born on %1$s</string>
    <string name="best_of">Best of %1$s</string>
    <string name="match">Match</string>
    <string name="discover_your_match">Discover Your Match</string>
    <string name="not_sure_what_to_watch">Not sure what to watch?</string>
    <string name="answer_a_few_quick_questions_and_we_ll_match_you_with_the_perfect_picks">Answer a few quick questions and we’ll match you with the perfect picks.</string>
    <string name="start_matching">Start Matching</string>
    <string name="next">Next</string>
    <string name="latest_seasons">Latest Seasons</string>
    <string name="clear_all">Clear all</string>
    <string name="you_recently_viewed">You Recent viewed</string>
    <string name="search_suggestion">Search Suggestion</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="looks_like_you_re_offline_let_s_reconnect_so_nyou_don_t_miss_out">Looks like you\'re offline. Let\'s reconnect so \nyou don\'t miss out!</string>
    <string name="try_again">Try Again</string>
    <string name="behind_the_scenes">Behind the Scenes</string>
    <string name="you_might_also_like">You Might Also Like</string>
    <string name="did_you_watch_it">Did You Watch it?</string>
    <string name="give_it_stars">Give it Stars!</string>
    <string name="let_the_world_know_how_you_felt">Let the world know how you felt.</string>
    <string name="top_reviews">Top Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="characters">Characters</string>
    <string name="director">Director, Screenplay, Story</string>
    <string name="producer">Producer</string>
    <string name="writer">Writer</string>
    <string name="welcome_back_to_cineverse">Welcome back to CineVerse!</string>
    <string name="join_as_guest">Join as Guest</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="enter_your_email_or_username">Enter your email or username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
    <string name="welcome">Welcome</string>
    <string name="title_recently_viewed">You Recently Viewed</string>
    <string name="your_collections">Your Collections</string>
    <string name="my_collections">my collections</string>
    <string name="arrow">arrow</string>
    <string name="My_Collections">My Collections</string>
    <string name="add">+</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="start_building_your_personal_library_by_saving_movies_or_series_you_want_to_remember">Start building your personal library by saving movies or series you want to remember.</string>
    <string name="no_collections_yet">No Collections Yet</string>
    <string name="add_collection">add collection</string>
    <string name="e_g_my_watchlist">e.g. My Watchlist</string>
    <string name="collection_name">Collection Name</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="new_collection">New Collection\n</string>
    <string name="create_a_new_collection_to_start_saving_your_favorite_movies_and_series">Create a new collection to start saving your favorite movies and series.</string>
    <string name="create_collection">Create Collection</string>
    <string name="you_re_almost_there">You\'re Almost There!</string>
    <string name="not_now">Not Now</string>
    <string name="join_cineverse">Join CineVerse</string>
    <string name="let_s_get_you_set_up_we_ll_take_you_to_the_website_to_create_your_account">Let\'s get you set up! We\'ll take you to the website to create your account.</string>
    <string name="go_to_website">Go to Website</string>
    <string name="delete">delete\n</string>
    <string name="logout_dialog_title">Are you sure you want to logout?</string>
    <string name="logout_dialog_caption">You can always sign back in with your account.</string>
    <string name="login_or_signup">Login &amp; Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_ll_be_taken_to_the_website_to_update_your_name_username_or_profile_picture">You’ll be taken to the website to update your name, username, or profile picture.</string>
</resources>