<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.myList.MyListsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_screen"
        tools:context=".ui.myList.MyListsFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Typography.title_sm"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:navigationIconTint="@color/shade_primary"
            app:title="@string/My_Collections"
            app:titleTextColor="@color/shade_primary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="80dp"
            app:items="@{viewModel.createdListUIState.createdList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:listitem="@layout/item_saved_list" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/floating_action_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="@dimen/radius_3xl"
            android:backgroundTint="@color/brand_primary"
            android:contentDescription="@string/add_collection"
            android:onClick="@{()->viewModel.onCreateList()}"
            app:cornerRadius="@dimen/radius_lg"
            app:icon="@drawable/plus"
            app:iconTint="@color/button_onPrimary"
            app:isVisible="@{viewModel.createdListUIState.isRealUser}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!--        error -->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_lost_connection"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="@dimen/spacing_small"
            app:layout_constraintBottom_toTopOf="@+id/title_lost_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lost_internet_animation" />

        <TextView
            android:id="@+id/title_lost_connection"
            style="@style/SemiBold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:text="@string/oops"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_lost_connection"
            style="@style/Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/brand_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_lost_connection" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:onClick="@{() -> viewModel.getData()}"
            android:text="@string/retry"
            android:textColor="@color/white_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_lost_connection" />


        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="title_lost_connection,animation_lost_connection,description_lost_connection,button_retry"
            app:showWhenNoInternet="@{viewModel.createdListUIState.error}" />


        <!--        empty List          -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:isListEmpty="@{viewModel.createdListUIState.isEmpty}"
            app:isVisible="@{viewModel.createdListUIState.isRealUser}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/icon_container"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/oval_background_quinary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/video_library"
                    app:tint="@color/brand_primary" />
            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_confirmation"
                style="@style/Typography.title_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius_xl"
                android:text="@string/no_collections_yet"
                android:textColor="@color/shade_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_container" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_confirmation_message"
                style="@style/Typography.body_sm_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius_s"
                android:gravity="center"
                android:text="@string/start_building_your_personal_library_by_saving_movies_or_series_you_want_to_remember"
                android:textColor="@color/shade_secondary_color"
                app:layout_constraintEnd_toEndOf="@+id/btn_go_to_explore"
                app:layout_constraintStart_toStartOf="@+id/btn_go_to_explore"
                app:layout_constraintTop_toBottomOf="@id/text_confirmation" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_explore"
                style="@style/Typography.body_md_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="@dimen/radius_3xl"
                android:layout_weight="1"
                android:background="@drawable/btn_rectangle"
                android:text="@string/start_collecting"
                android:textAllCaps="false"
                android:textColor="@color/button_onPrimary"
                app:backgroundTint="@color/button_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_confirmation_message" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>